--- a/src/editor.scss
+++ b/src/editor.scss
@@ -101,7 +101,7 @@
 .wp-block-outermost-icon-inserter__modal {
 	.components-modal__content {
 		flex: 1 1 0%;
-		overflow: auto;
+		overflow: hidden;
 		padding: 0px;
 
 		&:before {
@@ -112,23 +112,23 @@
 	.icon-inserter {
 		align-items: stretch;
 		display: flex;
-		height: 100%;
+		height: 100%;		
 	}
 
 	.icon-inserter__sidebar {
 		display: none;
 		flex-direction: column;
 		flex-shrink: 0;
-		overflow-y: scroll;
+		overflow: hidden;
 		width: 280px;
-		padding: 24px 32px 32px;
+		padding: 0px;
 
 		@media ( min-width: 900px ) {
 			display: flex;
 		}
 
 		&__search {
-			margin-bottom: 16px;
+			margin-bottom: 2px;
 
 			.components-base-control__field {
 				margin-bottom: 0;
@@ -138,6 +138,8 @@
 		&__category-type {
 			// Override core component styles.
 			border: none;
+			height:400px;  //-- changes via code
+    		overflow:auto;
 
 			.components-menu-group__label {
 				margin: 0;
@@ -165,9 +167,11 @@
 		flex-direction: column;
 		flex-shrink: 0;
 		overflow: auto;
-		padding-top: 24px;
-		padding-right: 32px;
+		padding-top: 10px;
+    	padding-right: 10px;
 		width: 100%;
+		height:300px;
+	
 
 		@media ( min-width: 900px ) {
 			width: calc(100% - 281px);
